--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Index</title>
-</head>
-<body>
-<h3>hello world</h3>
-</body>
-</html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/static/favicon.png">
+    <title>LED-мопед</title>
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://yastatic.net/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link href="/static/styles.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h3 class="text-muted">LED-мопед</h3>
+      </div>
+      <div class="jumbotron">
+        <h1>Настройка цвета</h1>
+        <form role="form">
+          <div class="form-group">
+            <label for="red">Красный</label>
+            <div class="input-group">
+              <input type="range" id="red" min="0" value="0" max="255" step="1" class="form-control">
+              <span class="input-group-addon">000</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="green">Зеленый</label>
+            <div class="input-group">
+              <input type="range" id="green" min="0" value="0" max="255" step="1" class="form-control">
+              <span class="input-group-addon">000</span>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="blue">Синий</label>
+            <div class="input-group">
+              <input type="range" id="blue" min="0" value="0" max="255" step="1" class="form-control">
+              <span class="input-group-addon">000</span>
+            </div>
+
+          </div>
+          <button type="submit" class="btn btn-warning">Отправить</button>
+        </form>
+      </div>
+      <div class="footer">
+        <p>Iskander, 2014</p>
+      </div>
+      </div> <!-- /container -->
+      <script src="https://yastatic.net/jquery/2.2.3/jquery.min.js"></script>
+      <script src="https://yastatic.net/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <script src="/static/app.js"></script>
+    </body>
+  </html>
