--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -22,25 +22,25 @@
             <label for="red">Красный</label>
             <div class="input-group">
               <input type="range" id="red" min="0" value="0" max="255" step="1" class="form-control">
-              <span class="input-group-addon">000</span>
+              <span class="input-group-addon" id="red_val">0</span>
             </div>
           </div>
           <div class="form-group">
             <label for="green">Зеленый</label>
             <div class="input-group">
               <input type="range" id="green" min="0" value="0" max="255" step="1" class="form-control">
-              <span class="input-group-addon">000</span>
+              <span class="input-group-addon" id="green_val">0</span>
             </div>
           </div>
           <div class="form-group">
             <label for="blue">Синий</label>
             <div class="input-group">
               <input type="range" id="blue" min="0" value="0" max="255" step="1" class="form-control">
-              <span class="input-group-addon">000</span>
+              <span class="input-group-addon" id="blue_val">0</span>
             </div>
 
           </div>
-          <button type="submit" class="btn btn-warning">Отправить</button>
+          <button type="button" class="btn btn-warning" id="send">Отправить</button>
         </form>
       </div>
       <div class="footer">
