add serial mock for testing without device

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -40,11 +40,12 @@
             </div>
 
           </div>
-          <button type="button" class="btn btn-warning" id="send">Отправить</button>
+          <button type="button" class="btn btn-danger" id="reset">Выключить</button>
+          <button type="button" class="btn btn-success" id="send">Обновить</button>
         </form>
       </div>
       <div class="footer">
-        <p>Iskander, 2014</p>
+        <p>Iskander, 2017</p>
       </div>
       </div> <!-- /container -->
       <script src="https://yastatic.net/jquery/2.2.3/jquery.min.js"></script>
