refactor: drop useless config

--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -41,6 +41,7 @@
 
           </div>
           <button type="button" class="btn btn-danger" id="reset">Выключить</button>
+          <button type="button" class="btn btn-warning" id="restore">Обратно</button>
           <button type="button" class="btn btn-success" id="send">Обновить</button>
         </form>
       </div>
